--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"jsonwebtoken": "^8.5.1",
+		"mongodb-memory-server": "^6.7.6",
+		"mongoose": "^5.10.5",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
