--- a/.env-Example
+++ b/.env-Example
@@ -1,1 +1,6 @@
-SECRET = "Enter some strings here, ex: this is a secret"
+SECRET = "SecretHokusPokus12345"
+ENVIRONMENT=test
+DB_USER=username
+DB_PASS=password
+DB_HOST=databaseHost
+DB_NAME=todo
