--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "root-react",
+	"homepage": "http://localhost:8080",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -9,11 +10,17 @@
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.20.0",
 		"bcryptjs": "^2.4.3",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
 		"cors": "^2.8.5",
+		"cross-env": "^7.0.2",
 		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"mocha": "^8.1.3",
 		"mongodb-memory-server": "^6.7.6",
 		"mongoose": "^5.10.5",
+		"path": "^0.12.7",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
@@ -23,7 +30,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "cd server && ENVIRONMENT=test mocha --recursive",
+		"test": "cross-env ENVIRONMENT=test && cd server && mocha --recursive",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -40,5 +47,6 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	}
+	},
+	"proxy": "http://localhost:8080"
 }
